# NameCutter

./: .gitignore  README.md  build.ps1  main.py  plan.md  pyproject.toml
.github/workflows/: release.yml
src/namecutter/: __init__.py  engine.py  gui.py  main.py  models.py
tests/: test_engine.py  test_gui.py  test_release_workflow.py
