[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "namecutter"
version = "0.3.0"
description = "Windows GUI tool for shortening file names when output paths exceed a limit."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex", email = "codex@local.invalid" },
]

[project.scripts]
namecutter = "namecutter.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
